--- a/sass/components/_linkDiv.scss
+++ b/sass/components/_linkDiv.scss
@@ -2,4 +2,8 @@
     position: absolute;
     top: -7rem;
     left: 0;
+
+    &--home {
+        top: 0;
+    }
 }
